[build-system]
requires = ["setuptools<=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jackery_solarvault"
description = "Solarvault integration for Home Assistant"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Bigdaddy1990" }]
keywords = ["home assistant", "jackery_solarvault", "solar", "automation", "telemetry"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
  "Typing :: Typed",
]
dynamic = ["version", "dependencies", "optional-dependencies"]
requires-python = ">=3.14"

[tool.ty.environment]
python-version = "3.14"

[project.urls]
Homepage = "https://github.com/Bigdaddy1990/jackery_solarvault"
Documentation = "https://github.com/Bigdaddy1990/jackery_solarvault/blob/main/README.md"
Issues = "https://github.com/Bigdaddy1990/jackery_solarvault/issues"

[tool.pytest.ini_options]
addopts = "-p no:pytest_cov -p pytest_cov.plugin -p pytest_homeassistant_custom_component --cov=custom_components/jackery_solarvault --cov-branch --cov-report=term-missing --cov-report=xml:coverage.xml --cov-report=html:htmlcov -q -ra --strict-markers --strict-config --tb=short --maxfail=20"
markers = [
  "asyncio: mark a test as using asyncio",
  "ci_only: mark a test to run only in CI",
  "benchmark: mark a test as benchmark/performance",
  "unit: fast isolated tests",
  "integration: Home Assistant integration tests",
  "slow: long-running tests",
]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "__pycache__", "pytest-cache-files-*"]
pythonpath = ["."]
asyncio_debug = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "error::sqlalchemy.exc.SAWarning",
  "error:usefixtures\\(\\) in .* without arguments has no effect:UserWarning", # pytest

  # -- HomeAssistant - aiohttp
  # Overwrite web.Application to pass a custom default argument to _make_request
  "ignore:Inheritance class HomeAssistantApplication from web.Application is discouraged:DeprecationWarning",
  # Hass wraps `ClientSession.close` to emit a warning if the session is closed accidentally
  "ignore:Setting custom ClientSession.close attribute is discouraged:DeprecationWarning:homeassistant.helpers.aiohttp_client",
  # Modify app state for testing
  "ignore:Changing state of started or joined application is deprecated:DeprecationWarning:tests.components.http.test_ban",

  # -- Tests
  # Ignore custom pytest marks
  "ignore:Unknown pytest.mark.disable_autouse_fixture:pytest.PytestUnknownMarkWarning:tests.components.met",
  "ignore:Unknown pytest.mark.dataset:pytest.PytestUnknownMarkWarning:tests.components.screenlogic",

  # -- DeprecationWarning already fixed in our codebase
  # https://github.com/kurtmckee/feedparser/ - 6.0.12
  "ignore:.*a temporary mapping .* from `updated_parsed` to `published_parsed` if `updated_parsed` doesn't exist:DeprecationWarning:feedparser.util",

  # -- design choice 3rd party
  # https://github.com/gwww/elkm1/blob/2.2.13/elkm1_lib/util.py#L8-L19
  "ignore:ssl.TLSVersion.TLSv1 is deprecated:DeprecationWarning:elkm1_lib.util",
  # https://github.com/bachya/regenmaschine/blob/2024.03.0/regenmaschine/client.py#L52
  "ignore:ssl.TLSVersion.SSLv3 is deprecated:DeprecationWarning:regenmaschine.client",

  # -- Setuptools DeprecationWarnings
  # https://github.com/Azure/azure-sdk-for-python
  "ignore:Deprecated call to `pkg_resources.declare_namespace\\('azure'\\)`:DeprecationWarning:pkg_resources",

  # -- tracked upstream / open PRs
  # https://github.com/hacf-fr/meteofrance-api/pull/688 - v1.4.0 - 2025-03-26
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:meteofrance_api.model.forecast",

  # -- fixed, waiting for release / update
  # https://github.com/httplib2/httplib2/pull/226 - >=0.21.0
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:httplib2",
  # https://github.com/httplib2/httplib2/pull/253 - >=0.31.1
  "ignore:'(addParseAction|delimitedList|leaveWhitespace|setName|setParseAction)' deprecated:DeprecationWarning:httplib2.auth",
  # https://github.com/lawtancool/pyControl4/pull/47 - >=1.6.0
  "ignore:with timeout\\(\\) is deprecated, use async with timeout\\(\\) instead:DeprecationWarning:pyControl4.account",
  # https://pypi.org/project/pyqwikswitch/ - >=1.0
  "ignore:client.loop property is deprecated:DeprecationWarning:pyqwikswitch.async_",
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:pyqwikswitch.async_",
  # https://github.com/allenporter/python-google-nest-sdm/pull/1229 - >9.1.2
  "ignore:datetime.*utcnow\\(\\) is deprecated:DeprecationWarning:google_nest_sdm.device",
  # https://github.com/rytilahti/python-miio/pull/1809 - >=0.6.0.dev0
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:miio.protocol",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:miio.miioprotocol",
  # https://github.com/rytilahti/python-miio/pull/1993 - >0.6.0.dev0
  "ignore:functools.partial will be a method descriptor in future Python versions; wrap it in enum.member\\(\\) if you want to preserve the old behavior:FutureWarning:miio.miot_device",
  # https://github.com/pyusb/pyusb/pull/545 - >1.3.1
  "ignore:Due to '_pack_', the '.*' Structure will use memory layout compatible with MSVC:DeprecationWarning:usb.backend.libusb0",
  # https://github.com/xchwarze/samsung-tv-ws-api/pull/151 - >=3.0.0 - 2024-12-06  # wrong stacklevel in aiohttp
  "ignore:verify_ssl is deprecated, use ssl=False instead:DeprecationWarning:aiohttp.client",

  # -- other
  # Locale changes might take some time to resolve upstream
  # https://github.com/Squachen/micloud/blob/v_0.6/micloud/micloud.py#L35 - v0.6 - 2022-12-08
  "ignore:'locale.getdefaultlocale' is deprecated and slated for removal in Python 3.15:DeprecationWarning:micloud.micloud",
  # https://pypi.org/project/agent-py/ - v0.0.24 - 2024-11-07
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:agent.a",
  # https://github.com/MatsNl/pyatag/issues/11 - v0.3.7.1 - 2023-10-09
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:pyatag.gateway",
  # https://github.com/lidatong/dataclasses-json/issues/328
  # https://github.com/lidatong/dataclasses-json/pull/351
  "ignore:The 'default' argument to fields is deprecated. Use 'dump_default' instead:DeprecationWarning:dataclasses_json.mm",
  # https://pypi.org/project/emulated-roku/ - v0.3.0 - 2023-12-19
  # https://github.com/martonperei/emulated_roku
  "ignore:loop argument is deprecated:DeprecationWarning:emulated_roku",
  # https://github.com/EnergieID/energyid-webhooks-py/ - v0.0.14 - 2025-05-06
  "ignore:The V1 WebhookClient is deprecated:DeprecationWarning:energyid_webhooks",
  # https://pypi.org/project/foobot_async/ - v1.0.1 - 2024-08-16
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:foobot_async",
  # https://pypi.org/project/motionblindsble/ - v0.1.3 - 2024-11-12
  # https://github.com/LennP/motionblindsble/blob/0.1.3/motionblindsble/device.py#L390
  "ignore:Passing additional arguments for BLEDevice is deprecated and has no effect:DeprecationWarning:motionblindsble.device",
  # https://pypi.org/project/pyeconet/ - v0.2.2 - 2026-03-05
  # https://github.com/w1ll1am23/pyeconet/blob/v0.2.2/src/pyeconet/api.py#L39
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:pyeconet.api",
  # https://github.com/thecynic/pylutron - v0.2.18 - 2025-04-15
  "ignore:setDaemon\\(\\) is deprecated, set the daemon attribute instead:DeprecationWarning:pylutron",
  # https://pypi.org/project/PyMetEireann/ - v2024.11.0 - 2024-11-23
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:meteireann",
  # https://github.com/pschmitt/pynuki/blob/1.6.3/pynuki/utils.py#L21 - v1.6.3 - 2024-02-24
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:pynuki.utils",
  # https://github.com/lextudio/pysnmp/blob/v7.1.21/pysnmp/smi/compiler.py#L23-L31 - v7.1.21 - 2025-06-19
  "ignore:smiV1Relaxed is deprecated. Please use smi_v1_relaxed instead:DeprecationWarning:pysnmp.smi.compiler",
  "ignore:getReadersFromUrls is deprecated. Please use get_readers_from_urls instead:DeprecationWarning:pysnmp.smi.compiler",
  # https://github.com/frenck/python-radios/blob/v0.3.2/src/radios/radio_browser.py#L76 - v0.3.2 - 2024-10-26
  "ignore:query\\(\\) is deprecated, use query_dns\\(\\) instead:DeprecationWarning:radios.radio_browser",
  # https://github.com/python-telegram-bot/python-telegram-bot/blob/v22.7/src/telegram/error.py#L243 - 22.7 - 2026-03-16
  "ignore:Deprecated since version v22.2.*attribute `retry_after` will be of type `datetime.timedelta`:DeprecationWarning:telegram.error",
  # https://github.com/briis/pyweatherflowudp/blob/v1.4.5/pyweatherflowudp/const.py#L20 - v1.4.5 - 2023-10-10
  "ignore:This function will be removed in future versions of pint:DeprecationWarning:pyweatherflowudp.const",
  # - SyntaxWarnings - invalid escape sequence
  # https://pypi.org/project/aprslib/ - v0.7.2 - 2022-07-10
  "ignore:.*invalid escape sequence:SyntaxWarning:.*aprslib.parsing.common",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:aprslib.parsing.common",
  # https://pypi.org/project/panasonic-viera/ - v0.4.4 - 2025-11-25
  # https://github.com/florianholzapfel/panasonic-viera/blob/0.4.4/panasonic_viera/remote_control.py#L665
  "ignore:.*invalid escape sequence:SyntaxWarning:.*panasonic_viera",
  # https://pypi.org/project/pyblackbird/ - v0.6 - 2023-03-15
  # https://github.com/koolsb/pyblackbird/pull/9 -> closed
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pyblackbird",
  # https://pypi.org/project/pyws66i/ - v1.1 - 2022-04-05
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pyws66i",
  # https://pypi.org/project/sanix/ - v1.0.6 - 2024-05-01
  # https://github.com/tomaszsluszniak/sanix_py/blob/v1.0.6/sanix/__init__.py#L42
  "ignore:.*invalid escape sequence:SyntaxWarning:.*sanix",
  # https://pypi.org/project/sleekxmppfs/ - v1.4.1 - 2022-08-18
  "ignore:.*invalid escape sequence:SyntaxWarning:.*sleekxmppfs.thirdparty.mini_dateutil", # codespell:ignore thirdparty
  # - SyntaxWarning - is with literal
  # https://github.com/majuss/lupupy/pull/15 - >0.3.2
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*lupupy.devices.alarm",
  # https://pypi.org/project/opuslib/ - v3.0.1 - 2018-01-16
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*opuslib.api.decoder",
  # https://pypi.org/project/pyiss/ - v1.0.1 - 2016-12-19
  "ignore:\"is.*\" with '.*' literal:SyntaxWarning:.*pyiss",
  # - SyntaxWarning - return in finally
  # https://github.com/nextcord/nextcord/pull/1268 - >3.1.1 - 2025-08-16
  "ignore:'return' in a 'finally' block:SyntaxWarning:.*nextcord.(gateway|player)",
  # https://pypi.org/project/sleekxmppfs/ - v1.4.1 - 2022-08-18
  "ignore:'return' in a 'finally' block:SyntaxWarning:.*sleekxmppfs.(roster.single|xmlstream.xmlstream)",

  # -- New in Python 3.13
  # https://github.com/youknowone/python-deadlib - Backports for aifc, telnetlib
  "ignore:aifc was removed in Python 3.13.*'standard-aifc':DeprecationWarning:speech_recognition",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:homeassistant.components.hddtemp.sensor",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:ndms2_client.connection",
  "ignore:telnetlib was removed in Python 3.13.*'standard-telnetlib':DeprecationWarning:pyws66i",

  # -- New in Python 3.14
  # https://github.com/litl/backoff/pull/220 - v2.2.1 - 2022-10-05 (archived)
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:(backoff._decorator|backoff._async)",
  # https://github.com/albertogeniola/elmax-api - v0.0.6.3 - 2024-11-30
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:elmax_api.http",
  # https://github.com/nextcord/nextcord/pull/1269 - >3.1.1 - 2025-08-16
  "ignore:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning:nextcord.member",
  # https://github.com/svinota/pyroute2
  "ignore:Due to '_pack_', the '.*' Structure will use memory layout compatible with MSVC:DeprecationWarning:pyroute2.ethtool.ioctl",
  # https://github.com/googleapis/python-genai
  "ignore:Inheritance class AiohttpClientSession from ClientSession is discouraged:DeprecationWarning:google.genai._api_client",
  "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning:google.genai.types",

  # -- Websockets 14.1
  # https://websockets.readthedocs.io/en/stable/howto/upgrade.html
  "ignore:websockets.legacy is deprecated:DeprecationWarning:websockets.legacy",

  # -- unmaintained projects, last release about 2+ years
  # https://pypi.org/project/aiomodernforms/ - v0.1.8 - 2021-06-27
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:aiomodernforms.modernforms",
  # https://pypi.org/project/colorthief/ - v0.2.1 - 2017-02-09
  "ignore:Image.Image.getdata is deprecated and will be removed in Pillow 14.* Use get_flattened_data instead:DeprecationWarning:colorthief",
  # https://pypi.org/project/directv/ - v0.4.0 - 2020-09-12
  "ignore:with timeout\\(\\) is deprecated:DeprecationWarning:directv.directv",
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:directv.models",
  # https://pypi.org/project/enocean/ - v0.50.1 (installed) -> v0.60.1 - 2021-06-18
  "ignore:It looks like you're using an HTML parser to parse an XML document:UserWarning:enocean.protocol.eep",
  # https://pypi.org/project/influxdb/ - v5.3.2 - 2024-04-18 (archived)
  "ignore:datetime.*utcfromtimestamp\\(\\) is deprecated and scheduled for removal:DeprecationWarning:influxdb.line_protocol",
  # https://pypi.org/project/lark-parser/ - v0.12.0 - 2021-08-30 -> moved to `lark`
  # https://pypi.org/project/commentjson/ - v0.9.0 - 2020-10-05
  # https://github.com/vaidik/commentjson/issues/51
  # https://github.com/vaidik/commentjson/pull/52
  # Fixed upstream, commentjson depends on old version and seems to be unmaintained
  "ignore:module '(sre_parse|sre_constants)' is deprecate:DeprecationWarning:lark.utils",
  # https://pypi.org/project/lomond/ - v0.3.3 - 2018-09-21
  "ignore:ssl.PROTOCOL_TLS is deprecated:DeprecationWarning:lomond.session",
  # https://pypi.org/project/oauth2client/ - v4.1.3 - 2018-09-07 (archived)
  "ignore:datetime.*utcnow\\(\\) is deprecated and scheduled for removal:DeprecationWarning:oauth2client.client",
  # https://pypi.org/project/pilight/ - v0.1.1 - 2016-10-19
  "ignore:pkg_resources is deprecated as an API:UserWarning:pilight",
  # https://pypi.org/project/pure-python-adb/ - v0.3.0.dev0 - 2020-08-05
  "ignore:.*invalid escape sequence:SyntaxWarning:.*ppadb",
  # https://pypi.org/project/pydub/ - v0.25.1 - 2021-03-10
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pydub.utils",
  # https://pypi.org/project/PyPasser/ - v0.0.5 - 2021-10-21
  "ignore:.*invalid escape sequence:SyntaxWarning:.*pypasser.utils",
  # https://pypi.org/project/rxv/ - v0.7.0 - 2021-10-10
  "ignore:defusedxml.cElementTree is deprecated, import from defusedxml.ElementTree instead:DeprecationWarning:rxv.ssdp",
]

[tool.ruff]
target-version = "py314"
required-version = ">=0.15.15"
line-length = 88
src = ["custom_components"]
indent-width = 4
show-fixes = true
fix = true
unsafe-fixes = false
force-exclude = true
output-format= "github"
preview = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "__pycache__",
    "*cache*",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "scripts",
    "docs",
    "logs",
    "APP",
    ".scripts",
]

[tool.ruff.analyze]
detect-string-imports = true
direction = "dependencies"
string-imports-min-dots = 2
preview= true

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false

[tool.ruff.lint]
preview = true
select = [
  "ANN",
  "ASYNC",  # flake8-async
  "B",      # flake8-bugbear
  "BLE",    # ble?
  "C",      # complexity
  "COM818", # Trailing comma on bare tuple prohibited
  "D",      # docstrings
  "DTZ003", # Use datetime.now(tz=) instead of datetime.utcnow()
  "DTZ004", # Use datetime.fromtimestamp(ts, tz=) instead of datetime.utcfromtimestamp(ts)
  "DTZ011", # Use datetime.now(tz=).date() instead of date.today()
  "E",      # pycodestyle
  "E501",
  "F",      # pyflakes/autoflake
  "F541",   # f-string without any placeholders
  "FLY",    # flynt
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "INP",    # flake8-no-pep420
  "ISC",    # flake8-implicit-str-concat
  "ICN001", # import concentions; {name} should be imported as {asname}
  "LOG",    # flake8-logging
  "N",
  "N804",   # First argument of a class method should be named cls
  "N805",   # First argument of a method should be named self
  "N806",   # Variable {name} in function should be snake_case
  "N815",   # Variable {name} in class scope should not be mixedCase
  "NPY",
  "PERF",   # Perflint
  "PGH",    # pygrep-hooks
  "PIE",    # flake8-pie
  "PL",     # pylint
  "PT",     # flake8-pytest-style
  "PTH",    # flake8-pathlib
  "PYI",    # flake8-pyi
  "RET",    # flake8-return
  "RSE",    # flake8-raise
  "RUF",    # Ruff-specific rules (see `ignore` for exclusions)
  "RUF100",
  "S107",   # Possible hardcoded password assigned to function default
  "S102",   # Use of exec detected
  "S103",   # bad-file-permissions
  "S108",   # hardcoded-temp-file
  "S301",   # suspicious-pickle-usage
  "S306",   # suspicious-mktemp-usage
  "S307",   # suspicious-eval-usage
  "S313",   # suspicious-xmlc-element-tree-usage
  "S314",   # suspicious-xml-element-tree-usage
  "S315",   # suspicious-xml-expat-reader-usage
  "S316",   # suspicious-xml-expat-builder-usage
  "S317",   # suspicious-xml-sax-usage
  "S318",   # suspicious-xml-mini-dom-usage
  "S319",   # suspicious-xml-pull-dom-usage
  "S601",   # paramiko-call
  "S602",   # subprocess-popen-with-shell-equals-true
  "S604",   # call-with-shell-equals-true
  "S608",   # hardcoded-sql-expression
  "S609",   # unix-command-wildcard-injection
  "SIM",    # flake8-simplify
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "T100",   # Trace found: {name} used
  "T20",    # flake8-print
  "TC",     # flake8-type-checking
  "TID",    # Tidy imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "UP031",  # Use format specifiers instead of percent format
  "UP032",  # Use f-string instead of `format` call
  "W",      # pycodestyle
  "Q"
]

ignore = ["PLC0415", "TID252"]
fixable = ["ALL"]
unfixable = []
future-annotations = true
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
logger-objects = ["logging_setup.logger"]

[project.scripts]
hass = "homeassistant.__main__:main"

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401", "F403", "E402", "RUF067"]

[tool.ruff.lint.pydocstyle]
convention = "google"
property-decorators = ["propcache.api.cached_property"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"async_timeout".msg = "use asyncio.timeout instead"
"pytz".msg = "use zoneinfo instead"
"tests".msg = "You should not import tests"
"__future__.annotations".msg = "It should not be needed because Home Assistant requires Python 3.14+"

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["homeassistant", "custom_components", "pytest_"]
combine-as-imports = true
split-on-trailing-comma = false
case-sensitive = true
order-by-type = true
single-line-exclusions = ["os", "json"]

[tool.ruff.lint.pyupgrade]
# Preserve types
keep-runtime-typing = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-builtins]
strict-checking = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true
strict = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true
parametrize-names-type = "list"
parametrize-values-row-type = "list"
parametrize-values-type = "list"

[tool.ruff.lint.flake8-tidy-imports]
# Require lazy imports by default, except for modules with import-time side effects.
require-lazy = { include = "all", exclude = ["sitecustomize"] }

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
python_version = "3.14"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = "deprecated"
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true
local_partial_types = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
sqlite_cache = false

[[tool.mypy.overrides]]
module = ["custom_components.jackery_solarvault.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
# Strict typing is still in progress; keep these exceptions explicit until
# they can be removed under the final Home Assistant typing profile.
warn_return_any = true
disable_error_code = [
  "no-any-return",  # HA core / aiohttp helpers return Any in many places
  "arg-type",  # number.py value_transform widens int → float by design
  "operator",  # period totals fold None vs float at runtime via guards
  "type-arg",  # asyncio.Task / coordinator hints intentionally accept generic dicts
  "misc",  # dynamic TypedDict construction in HA service / repair payloads
  "call-arg",  # ConfigFlow(domain=...) keyword forwarded via __init_subclass__
]

[tool.coverage.run]
branch = true
source = ["custom_components/jackery_solarvault"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85
skip_covered = true
precision = 2
ignore_errors = false
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about missing debug-only code:
  "def __repr__",
  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",
  # TYPE_CHECKING and @overload blocks are never executed during pytest run
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
include = ["custom_components*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
tests = { file = ["requirements-test.txt"] }

[tool.pylint.BASIC]
class-const-naming-style = "any"

[tool.pylint.REPORTS]
score = true

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = [
  "builtins.BaseException",
  "builtins.Exception",
  # "homeassistant.exceptions.HomeAssistantError",  # too many issues
]

[tool.pylint.TYPING]
runtime-typing = false

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 72

[tool.pylint.TYPECHECK]
ignored-classes = [
  "_CountingAttr", # for attrs
]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.smellcheck]
select = []  # only run these checks (default: all)
ignore = []          # skip these checks
fail-on = "warning"                  # override default fail-on
format = "text"                      # override default format
baseline = ".smellcheck-baseline.json"  # suppress known findings
cache = false                           # enable file-level caching (default: true)
cache-dir = ".smellcheck-cache"        # cache directory (default: .smellcheck-cache)

# per-path overrides
[tool.smellcheck.per-file-ignores]
"scripts/*" = []
# Untracked scratch parsers (gitignored); suppress every rule (smellcheck
# resolves only exact rule IDs, no family prefixes or wildcards).
"*_tmp_*.py" = [
  "SC101", "SC102", "SC103", "SC104", "SC105", "SC106", "SC107", "SC201",
  "SC202", "SC203", "SC204", "SC205", "SC206", "SC207", "SC208", "SC209",
  "SC210", "SC211", "SC301", "SC302", "SC303", "SC304", "SC305", "SC306",
  "SC307", "SC308", "SC309", "SC401", "SC402", "SC403", "SC404", "SC405",
  "SC406", "SC407", "SC501", "SC502", "SC503", "SC504", "SC505", "SC506",
  "SC507", "SC508", "SC509", "SC601", "SC602", "SC603", "SC604", "SC605",
  "SC606", "SC701", "SC702", "SC703", "SC704", "SC705", "SC706", "SC801",
  "SC802", "SC803", "SC804", "SC805",
]

[tool.pylint."MESSAGES CONTROL"]
# Reasons disabled:
# format - handled by ruff
# locally-disabled - it spams too much
# duplicate-code - unavoidable
# cyclic-import - doesn't test if both import on load
# abstract-class-little-used - prevents from setting right foundation
# unused-argument - generic callbacks and setup methods create a lot of warnings
# too-many-* - are not enforced for the sake of readability
# too-few-* - same as too-many-*
# abstract-method - with intro of async there are always methods missing
# inconsistent-return-statements - doesn't handle raise
# too-many-ancestors - it's too strict.
# wrong-import-order - isort guards this
# possibly-used-before-assignment - too many errors / not necessarily issues
# ---
# Pylint CodeStyle plugin
# consider-using-namedtuple-or-dataclass - too opinionated
# consider-using-assignment-expr - decision to use := better left to devs
disable = [
  "format",
  "abstract-method",
  "cyclic-import",
  "duplicate-code",
  "inconsistent-return-statements",
  "locally-disabled",
  "not-context-manager",
  "too-few-public-methods",
  "too-many-ancestors",
  "too-many-arguments",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-public-methods",
  "too-many-boolean-expressions",
  "too-many-positional-arguments",
  "wrong-import-order",
  "consider-using-namedtuple-or-dataclass",
  "consider-using-assignment-expr",
  "possibly-used-before-assignment",

  # Disabled while existing violations are being cleaned up
  "home-assistant-unused-test-fixture-argument",

  # Handled by ruff
  # Ref: <https://github.com/astral-sh/ruff/issues/970>
  "await-outside-async",    # PLE1142
  "bad-str-strip-call",     # PLE1310
  "bad-string-format-type", # PLE1307
  "bidirectional-unicode",  # PLE2502
  "continue-in-finally",    # PLE0116
  "duplicate-bases",        # PLE0241
  "misplaced-bare-raise",   # PLE0704
  "format-needs-mapping",   # F502
  "function-redefined",     # F811
  # Needed because ruff does not understand type of __all__ generated by a function
  # "invalid-all-format", # PLE0605
  "invalid-all-object",                 # PLE0604
  "invalid-character-backspace",        # PLE2510
  "invalid-character-esc",              # PLE2513
  "invalid-character-nul",              # PLE2514
  "invalid-character-sub",              # PLE2512
  "invalid-character-zero-width-space", # PLE2515
  "logging-too-few-args",               # PLE1206
  "logging-too-many-args",              # PLE1205
  "missing-format-string-key",          # F524
  "mixed-format-string",                # F506
  "no-method-argument",                 # N805
  "no-self-argument",                   # N805
  "nonexistent-operator",               # B002
  "nonlocal-without-binding",           # PLE0117
  "not-in-loop",                        # F701, F702
  "notimplemented-raised",              # F901
  "return-in-init",                     # PLE0101
  "return-outside-function",            # F706
  "syntax-error",                       # E999
  "too-few-format-args",                # F524
  "too-many-format-args",               # F522
  "too-many-star-expressions",          # F622
  "truncated-format-string",            # F501
  "undefined-all-variable",             # F822
  "undefined-variable",                 # F821
  "used-prior-global-declaration",      # PLE0118
  "yield-inside-async-function",        # PLE1700
  "yield-outside-function",             # F704
  "anomalous-backslash-in-string",      # W605
  "assert-on-string-literal",           # PLW0129
  "assert-on-tuple",                    # F631
  "bad-format-string",                  # W1302, F
  "bad-format-string-key",              # W1300, F
  "bare-except",                        # E722
  "binary-op-exception",                # PLW0711
  "cell-var-from-loop",                 # B023
  # "dangerous-default-value", # B006, ruff catches new occurrences, needs more work
  "duplicate-except",                     # B014
  "duplicate-key",                        # F601
  "duplicate-string-formatting-argument", # F
  "duplicate-value",                      # F
  "eval-used",                            # S307
  "exec-used",                            # S102
  "expression-not-assigned",              # B018
  "f-string-without-interpolation",       # F541
  "forgotten-debug-statement",            # T100
  "format-string-without-interpolation",  # F
  # "global-statement", # PLW0603, ruff catches new occurrences, needs more work
  "global-variable-not-assigned",      # PLW0602
  "implicit-str-concat",               # ISC001
  "import-outside-toplevel",           # PLC0415
  "import-self",                       # PLW0406
  "inconsistent-quotes",               # Q000
  "invalid-envvar-default",            # PLW1508
  "keyword-arg-before-vararg",         # B026
  "logging-format-interpolation",      # G
  "logging-fstring-interpolation",     # G
  "logging-not-lazy",                  # G
  "misplaced-future",                  # F404
  "named-expr-without-context",        # PLW0131
  "nested-min-max",                    # PLW3301
  "pointless-statement",               # B018
  "raise-missing-from",                # B904
  "redefined-builtin",                 # A001
  "try-except-raise",                  # TRY302
  "unused-argument",                   # ARG001, we don't use it
  "unused-format-string-argument",     #F507
  "unused-format-string-key",          # F504
  "unused-import",                     # F401
  "unused-variable",                   # F841
  "useless-else-on-loop",              # PLW0120
  "wildcard-import",                   # F403
  "bad-classmethod-argument",          # N804
  "consider-iterating-dictionary",     # SIM118
  "empty-docstring",                   # D419
  "invalid-name",                      # N815
  "line-too-long",                     # E501, disabled globally
  "missing-class-docstring",           # D101
  "missing-final-newline",             # W292
  "missing-function-docstring",        # D103
  "missing-module-docstring",          # D100
  "multiple-imports",                  #E401
  "singleton-comparison",              # E711, E712
  "subprocess-run-check",              # PLW1510
  "superfluous-parens",                # UP034
  "ungrouped-imports",                 # I001
  "unidiomatic-typecheck",             # E721
  "unnecessary-direct-lambda-call",    # PLC3002
  "unnecessary-lambda-assignment",     # PLC3001
  "unnecessary-pass",                  # PIE790
  "unneeded-not",                      # SIM208
  "useless-import-alias",              # PLC0414
  "wrong-import-order",                # I001
  "wrong-import-position",             # E402
  "comparison-of-constants",           # PLR0133
  "comparison-with-itself",            # PLR0124
  "consider-alternative-union-syntax", # UP007
  "consider-merging-isinstance",       # PLR1701
  "consider-using-alias",              # UP006
  "consider-using-dict-comprehension", # C402
  "consider-using-generator",          # C417
  "consider-using-get",                # SIM401
  "consider-using-set-comprehension",  # C401
  "consider-using-sys-exit",           # PLR1722
  "consider-using-ternary",            # SIM108
  "literal-comparison",                # F632
  "property-with-parameters",          # PLR0206
  "super-with-arguments",              # UP008
  "too-many-branches",                 # PLR0912
  "too-many-return-statements",        # PLR0911
  "too-many-statements",               # PLR0915
  "trailing-comma-tuple",              # COM818
  "unnecessary-comprehension",         # C416
  "use-a-generator",                   # C417
  "use-dict-literal",                  # C406
  "use-list-literal",                  # C405
  "useless-object-inheritance",        # UP004
  "useless-return",                    # PLR1711
  "no-else-break",                     # RET508
  "no-else-continue",                  # RET507
  "no-else-raise",                     # RET506
  "no-else-return",                    # RET505
  "broad-except",                      # BLE001
  "protected-access",                  # SLF001
  "broad-exception-raised",            # TRY002
  "consider-using-f-string",           # PLC0209
  # "no-self-use", # PLR6301  # Optional plugin, not enabled

  # Handled by mypy
  # Ref: <https://github.com/antonagestam/pylint-mypy-overlap>
  "abstract-class-instantiated",
  "arguments-differ",
  "assigning-non-slot",
  "assignment-from-no-return",
  "assignment-from-none",
  "bad-exception-cause",
  "bad-format-character",
  "bad-reversed-sequence",
  "bad-super-call",
  "bad-thread-instantiation",
  "catching-non-exception",
  "comparison-with-callable",
  "deprecated-class",
  "dict-iter-missing-items",
  "format-combined-specification",
  "global-variable-undefined",
  "import-error",
  "inconsistent-mro",
  "inherit-non-class",
  "init-is-generator",
  "invalid-class-object",
  "invalid-enum-extension",
  "invalid-envvar-value",
  "invalid-format-returned",
  "invalid-hash-returned",
  "invalid-metaclass",
  "invalid-overridden-method",
  "invalid-repr-returned",
  "invalid-sequence-index",
  "invalid-slice-index",
  "invalid-slots-object",
  "invalid-slots",
  "invalid-star-assignment-target",
  "invalid-str-returned",
  "invalid-unary-operand-type",
  "invalid-unicode-codec",
  "isinstance-second-argument-not-valid-type",
  "method-hidden",
  "misplaced-format-function",
  "missing-format-argument-key",
  "missing-format-attribute",
  "missing-kwoa",
  "no-member",
  "no-value-for-parameter",
  "non-iterator-returned",
  "non-str-assignment-to-dunder-name",
  "nonlocal-and-global",
  "not-a-mapping",
  "not-an-iterable",
  "not-async-context-manager",
  "not-callable",
  "not-context-manager",
  "overridden-final-method",
  "raising-bad-type",
  "raising-non-exception",
  "redundant-keyword-arg",
  "relative-beyond-top-level",
  "self-cls-assignment",
  "signature-differs",
  "star-needs-assignment-target",
  "subclassed-final-class",
  "super-without-brackets",
  "too-many-function-args",
  "typevar-double-variance",
  "typevar-name-mismatch",
  "unbalanced-dict-unpacking",
  "unbalanced-tuple-unpacking",
  "unexpected-keyword-arg",
  "unhashable-member",
  "unpacking-non-sequence",
  "unsubscriptable-object",
  "unsupported-assignment-operation",
  "unsupported-binary-operation",
  "unsupported-delete-operation",
  "unsupported-membership-test",
  "used-before-assignment",
  "using-final-decorator-in-unsupported-version",
  "wrong-exception-operation",
]
enable = [
  #"useless-suppression",  # temporarily every now and then to clean them up
  "use-symbolic-message-instead",
]
per-file-ignores = [
  # redefined-outer-name: Tests reference fixtures in the test function
  # use-implicit-booleaness-not-comparison: Tests need to validate that a list
  # or a dict is returned
  "tests/**:redefined-outer-name,use-implicit-booleaness-not-comparison",
]

# Bandit configuration aligned with Home Assistant guidelines
[tool.bandit]
exclude_dirs = ["tests", "scripts", "docs"]
tests = []
skips = ["B101", "B102", "B110", "B112", "B307", "B324", "B410", "B603", "B608", "B612", "B703"]

[tool.cfduplication]
# Minimum duplicated line threshold
MinLineCount= 50
# Paths to ignore for duplication checking
IgnorePatterns = ["docs/**", "tests/**", "scripts/**"]
